<resources>
    <string name="app_name">Practicaley</string>
    <string name="ID_empleado">ID empleado</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Colocar_ID">Colocar ID</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Logo">Logo</string>
    <string name="ID_Articulo">ID Articulo</string>
    <string name="Nom_Articulo">Nombre de Articulo</string>
    <string name="Load">Load</string>
    <string name="Reserva">Reserva</string>
    <string name="cantidadAAg">¿Que cantidad se agregara?</string>
    <string name="valor">valor</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Relleno">.</string>
    <string name="ID_Load">ID Load</string>
    <string name="Escaner">Usar Escaner</string>
    <string name="Continuar">Continuar</string>
    <string name="Codigo">Codigo</string>
    <string name="Ag_tarea">Agregar Tarea</string>
    <string name="Ag_load">Agregar Load</string>
    <string name="Ag_articulo">Agregar articulo</string>
    <string name="Descripcion_Tarea">Descripcion tarea</string>
    <string name="Codigo_Barras">Codigo de barras</string>
    <string name="Man_tarea">Mandar Tarea</string>
    <string name="Extra">Algo mas</string>
    <string name="Regresar">Regresar</string>
    <string name="Cantidad">Cantidad</string>
    <string name="rep_fech">Reporte X: Fecha</string>
    <string name="Pasillo">Pasillo</string>
    <string name="Ubicacion">Ubicacion</string>
    <string name="Zona">Zona</string>
    <string name="Seguro_ub">¿Estas seguro de esta ubicación?</string>
    <string name="ID_Pasillo">ID Pasillo</string>
    <string name="CantidadCon">¿Que cantidad se conto?</string>
    <string name="ID_Reserva">ID Reserva</string>
    <string name="Seguro_el">¿Estas seguro de eliminar?</string>
    <string name="AgInvPas">agregar inventario pasillo X</string>
    <string name="Levantar_Inv">Levantar Inventario</string>
    <string name="Consultar_Ar">Consultar por Articulo</string>
    <string name="Reporte_Comparativo">Reporte Comparativo</string>
    <string name="Control_Inv">Control de inventario</string>
    <string name="Consultar_pas">Consultar por Pasillo</string>
    <string name="Agregar">Agregar</string>
    <string name="Modificar">Modificar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="CantidadAc">Cantidad Actual: X</string>
    <string name="CantidadNw">Nueva Cantidad</string>
    <string name="SurtirDom">Surtir a Domicilio</string>
    <string name="ReservarLoad">Reservar Loads</string>
    <string name="TaskList">Lista de Tareas</string>
    <string name="Tipo">¿Que tipo es?</string>
    <string name="CantidadRetira">¿Que cantidad se retira?</string>
    <string name="PasilloX">Pasillo X</string>
    <string name="Inventario">Inventario</string>
    <string name="AsignarTa">Asignar Tareas</string>
    <string name="SeleccionRev">Seleccione cual revisar</string>
    <string name="Tarea">Tarea</string>
    <string name="Ub_disponibles">Ubicaciones Disponibles</string>
    <string name="Num_serie">Numero de serie:</string>
    <string name="title_activity_agregar_load_pasillo">AgregarLoadPasillo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>