<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/almac_n_3d_18891790">

    <androidx.cardview.widget.CardView
        android:layout_width="388dp"
        android:layout_height="500dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="80dp"
        android:background="@color/white"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAgregar"
                android:layout_width="228dp"
                android:layout_height="99dp"
                android:layout_marginTop="44dp"
                android:background="@drawable/burons"
                android:text="@string/Agregar"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEliminar"
                android:layout_width="228dp"
                android:layout_height="99dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/burons"
                android:text="@string/Eliminar"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnModificar" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnModificar"
                android:layout_width="228dp"
                android:layout_height="99dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/burons"
                android:text="@string/Modificar"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAgregar" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>



    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="158dp"
        android:layout_height="101dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/casa_ley_logo_a556b3ef68_seeklogo_com" />

</androidx.constraintlayout.widget.ConstraintLayout>