<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/almac_n_3d_18891790">

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="426dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="60dp"
        android:background="@color/white"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/codigoDos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/ID_Articulo"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/escaneadorDos"
                android:layout_width="248dp"
                android:layout_height="94dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/burons"
                android:text="@string/Escaner"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDesc" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/continuarDos"
                android:layout_width="248dp"
                android:layout_height="94dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/burons"
                android:text="@string/Continuar"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/escaneadorDos" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextDesc"
                android:layout_width="280dp"
                android:layout_height="58dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                app:boxStrokeColor="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/codigoDos">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editCodigoUno"
                    android:layout_width="279dp"
                    android:layout_height="55dp"
                    android:background="@drawable/login"
                    android:hint="@string/Codigo"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/codCol" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="209dp"
        android:layout_height="128dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/casa_ley_logo_a556b3ef68_seeklogo_com" />


</androidx.constraintlayout.widget.ConstraintLayout>